--- a/server/view/index.html
+++ b/server/view/index.html
@@ -9,7 +9,7 @@
 		
 		<!-- Bootstrap -->
 		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="lib/jquery/jquery-1.11.0.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 		
 		<!-- Socket.io -->
@@ -21,19 +21,20 @@
 		<!-- Main -->
 		<script>
 			require.config({
-			        shim: {
-			          'socketio': {
-			            exports: 'io'
-			          }
-			        },
-			        paths: {
-			          socketio: '../socket.io/socket.io',
-			        }
-			      });
-			      
-			      require(['main'], function(main) {
-			        
-			      });
+		        shim: {
+		          'socketio': {
+		            exports: 'io'
+		          }
+		        },
+		        paths: {
+		          socketio: '../socket.io/socket.io',
+		        },
+				baseUrl: '/',
+		      });
+		      
+		      require(['main'], function(main) {
+		        
+		      });
 		</script>
 	</head>
 	<body>
