--- a/server/view/index.html
+++ b/server/view/index.html
@@ -11,6 +11,9 @@
 		<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<script src="lib/jquery/jquery-1.11.0.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+		<script src="lib/bootstrap/js/docs.min.js"></script>
+    
+    <link href="style.css" rel="stylesheet">
 		
 		<!-- Socket.io -->
 		<script src="/socket.io/socket.io.js"></script>
@@ -38,9 +41,13 @@
 		</script>
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse" role="navigation">
+		
+    <!-- Navbar
+    ================================================== -->
+		<nav class="navbar navbar-default" role="navigation">
 		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
+		    
+        <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 		        <span class="sr-only">Toggle navigation</span>
@@ -56,11 +63,59 @@
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="https://stand.scm.azurewebsites.net/dev/wwwroot">Edit</a></li>
 		      </ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
+		    </div>
+		  </div>
 		</nav>
+		
+		<!-- Carousel
+    ================================================== 
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+     
+      <!-- Indicators
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Example headline.</h1>
+              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>One more for good measure.</h1>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div><!-- /.carousel -->
+		
 		<button type="button" class="btn btn-primary">Go</button>
 		<button type="button" class="btn btn-primary">Pause / Resume</button>
+		
 	</body>
 
 </html>
