--- a/server/view/index.html
+++ b/server/view/index.html
@@ -113,8 +113,12 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
 		
-		<button type="button" class="btn btn-primary">Go</button>
-		<button type="button" class="btn btn-primary">Pause / Resume</button>
+		<button type="button" class="btn btn-primary" id="start">Start</button>
+		<button type="button" class="btn btn-primary" id="next">Next</button>
+		<button type="button" class="btn btn-primary" id="pause">Pause / Resume</button>
+		<button type="button" class="btn btn-primary" id="stop">Stop</button>
+    
+    <div id="main">Loading...</div>
 		
 	</body>
 
