--- a/server/view/index.html
+++ b/server/view/index.html
@@ -149,6 +149,7 @@
 		<button type="button" class="btn btn-primary" id="stop">Stop</button>
     
     <div id="main">Loading...</div>
+    <div id="stage"></div>
 		
 	</body>
 
