edit link should open in new tab

--- a/server/view/index.html
+++ b/server/view/index.html
@@ -92,7 +92,7 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="https://stand.scm.azurewebsites.net/dev/wwwroot/config.json">Edit</a></li>
+		        <li><a href="https://stand.scm.azurewebsites.net/dev/wwwroot/config.json" target="_blank">Edit</a></li>
 		      </ul>
 		    </div>
 		  </div>
