--- a/server/view/index.html
+++ b/server/view/index.html
@@ -98,18 +98,28 @@
 		  </div>
 		</nav>
     
+    <!-- List of Stage
+    ================================================== -->
     <div class="container">
-      <div class="btn-group btn-group-lg">
-    		<button type="button" class="btn btn-primary" id="start" data-toggle="modal" data-target="#recordingAlert">Start</button>
-    		<button type="button" class="btn btn-primary" id="shuffle">Shuffle</button>
-    		<button type="button" class="btn btn-primary" id="next">Next</button>
-    		<button type="button" class="btn btn-primary" id="stop">Stop</button>
+      <div class="list-group">
+        <span class="list-group-item">
+          <div class="btn-group btn-group-justified">
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary" id="start" data-toggle="modal" data-target="#recordingAlert"><span class="glyphicon glyphicon-play"></span></button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary" id="shuffle"><span class="glyphicon glyphicon-random"></span></button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary" id="next"><span class="glyphicon glyphicon-forward"></span></button>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary" id="stop"><span class="glyphicon glyphicon-stop"></span></button>
+            </div>
+          </div>
+        </span>
+        <span id="stage"></span>
       </div>
-    </div>
-    
-    <div class="container">
-      <br /><br />
-      <div id="stage"></div>
     </div>
 		
     <!-- Recording Alert
@@ -117,15 +127,11 @@
     <div class="modal fade" id="recordingAlert" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myModalLabel">Alert</h4>
-          </div>
           <div class="modal-body">
             <h4>Please start recording!</h4>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
           </div>
         </div>
       </div>
