--- a/server/view/index.html
+++ b/server/view/index.html
@@ -78,7 +78,7 @@
             $(document.body).css({
               backgroundImage: 'url(' + url + ')',
               backgroundRepeat: 'no-repeat',
-              backgroundSize: '100%'
+              backgroundSize: 'cover'
             });
           }
         });
