--- a/server/view/index.html
+++ b/server/view/index.html
@@ -141,7 +141,7 @@
 		
     <!-- Recording Alert
     ================================================== -->
-    <div class="modal fade" id="recordingAlert" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="recordingAlert" style="overflow: hidden;" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
