--- a/server/view/index.html
+++ b/server/view/index.html
@@ -89,16 +89,13 @@
 		
     <!-- Navbar
     ================================================== -->
-		<nav class="navbar navbar-default" style="border-radius: 0;" role="navigation">
+		<nav class="navbar navbar-default" role="navigation">
 		  <div class="container-fluid">
 		    
         <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
 		      </button>
 		      <span class="navbar-brand" href="#" id="navdate"></span>
 		    </div>
@@ -116,7 +113,7 @@
     ================================================== -->
     <div class="container">
       <div class="list-group">
-        <span class="list-group-item">
+        <span class="list-group-item list-group-item-transparent">
           <div class="btn-group btn-group-justified">
             <div class="btn-group">
               <button type="button" class="btn btn-primary" id="start" data-toggle="modal" data-target="#recordingAlert"><span class="glyphicon glyphicon-play"></span></button>
@@ -141,7 +138,7 @@
 		
     <!-- Recording Alert
     ================================================== -->
-    <div class="modal fade" id="recordingAlert" style="overflow: hidden;" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="recordingAlert" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
