add a back button to the standup page

--- a/server/view/index.html
+++ b/server/view/index.html
@@ -130,6 +130,9 @@
             <div class="btn-group">
               <button type="button" class="btn btn-primary" id="shuffle"><span class="glyphicon glyphicon-random"></span></button>
             </div>
+             <div class="btn-group">
+              <button type="button" class="btn btn-primary" id="previous"><span class="glyphicon glyphicon-backward"></span></button>
+            </div>
             <div class="btn-group">
               <button type="button" class="btn btn-primary" id="next"><span class="glyphicon glyphicon-forward"></span></button>
             </div>
