--- a/server/view/index.html
+++ b/server/view/index.html
@@ -125,7 +125,7 @@
         <span class="list-group-item list-group-item-transparent">
           <div class="btn-group btn-group-justified">
             <div class="btn-group">
-              <button type="button" class="btn btn-primary" id="start" data-toggle="modal" data-target="#recordingAlert"><span class="glyphicon glyphicon-play"></span></button>
+              <button type="button" class="btn btn-primary" id="start"><span class="glyphicon glyphicon-play"></span></button>
             </div>
             <div class="btn-group">
               <button type="button" class="btn btn-primary" id="shuffle"><span class="glyphicon glyphicon-random"></span></button>
@@ -148,7 +148,7 @@
       </div>
     </div>
 		
-    <!-- Recording Alert
+    <!-- Recording Alert (currently not being used)
     ================================================== -->
     <div class="modal fade" id="recordingAlert" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
