--- a/client/style.css
+++ b/client/style.css
@@ -23,7 +23,8 @@ body.alerting {
 }
 
 .list-group-item-transparent {
-	background-color: rgba(255, 255, 255, .80);
+	background-color: rgba(255, 255, 255, .50);
+	color: rgb(20, 20, 20);
 }
 
 .list-group-item:first-child {
