--- a/server/view/index.html
+++ b/server/view/index.html
@@ -122,7 +122,7 @@
     ================================================== -->
     <div class="container">
       <div class="list-group">
-        <span class="list-group-item list-group-item-transparent">
+        <span class="list-group-item list-group-item-transparent controls">
           <div class="btn-group btn-group-justified">
             <div class="btn-group">
               <button type="button" class="btn btn-primary" id="start"><span class="glyphicon glyphicon-play"></span></button>
