--- a/server/view/index.html
+++ b/server/view/index.html
@@ -40,14 +40,14 @@
 				baseUrl: '/',
       });
       
-      var formatDate = (function() {
-        var d_names = new Array("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday");
-        var m_names = new Array("January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December");
+      let formatDate = (function() {
+        let d_names = new Array("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday");
+        let m_names = new Array("January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December");
       
         return function(d) {
-          var curr_day = d.getDay();
-          var curr_date = d.getDate();
-          var sup = "";
+          let curr_day = d.getDay();
+          let curr_date = d.getDate();
+          let sup = "";
           if (curr_date == 1 || curr_date == 21 || curr_date ==31) {
             sup = "st";
           } else if (curr_date == 2 || curr_date == 22) {
@@ -58,8 +58,8 @@
             sup = "th";
           }
           
-          var curr_month = d.getMonth();
-          var curr_year = d.getFullYear();
+          let curr_month = d.getMonth();
+          let curr_year = d.getFullYear();
           
           return (d_names[curr_day] + ", " + curr_date + "<SUP>" + sup + "</SUP> " + m_names[curr_month] + " " + curr_year);
         };
@@ -75,8 +75,8 @@
           url: "/image",
         }).done(function(data) {
           if (data && data.url) {
-            var url = data.url;
-            var label = data.label;
+            let url = data.url;
+            let label = data.label;
             if (label && label.indexOf('(') > 0) {
               label = label.substr(0, label.indexOf('('));
             }
