--- a/client/style.css
+++ b/client/style.css
@@ -1,23 +1,23 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
 
-html, 
+html,
 body {
 	width: 100%;
 	height: 100%;
 }
 
 body {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-x: 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position-x: 50%;
 }
 
 body.alerting {
 	background: rgb(244, 35, 35) !important;
 }
 
-a, 
+a,
 a:hover {
 	color: inherit;
 }
@@ -52,8 +52,8 @@ a:hover {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	position: sticky;
-    top: 0;
-    z-index: 1;
+	top: 0;
+	z-index: 1;
 }
 
 .list-group-item-transparent {
@@ -66,19 +66,19 @@ a:hover {
 }
 
 .list-group-item:first-child {
-	border-top-left-radius: 0; 
+	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 }
 
 #stage {
 	display: block;
 	height: calc(100vh - 140px);
-    overflow-y: auto;
+	overflow-y: auto;
 }
 
 .navbar {
 	margin-bottom: 10px;
-	border-radius: 0; 
+	border-radius: 0;
 	background-color: rgba(255, 255, 255, .95);
 }
 
@@ -96,4 +96,12 @@ a:hover {
 
 .hide {
 	display: none;
+}
+
+.avatar {
+	width: 20px;
+	border: 1px solid white;
+	border-radius: 10px;
+	box-shadow: black 0px 0px 3px;
+	margin-right: 10px;
 }
