--- a/server/view/index.html
+++ b/server/view/index.html
@@ -13,6 +13,7 @@
   <script src="lib/jquery/jquery-1.11.0.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/bootstrap/js/docs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
 
   <link href="style.css" rel="stylesheet">
 
@@ -143,6 +144,9 @@
           <div class="btn-group">
             <button type="button" class="btn btn-primary" id="music"><span
                 class="glyphicon glyphicon-music"></span></button>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-primary" id="confetti">🎉</button>
           </div>
         </div>
       </span>
